# surt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  surt_bubble.c  surt_heap.c  surt_insert.c  surt_merge.c  surt_quick.c  surt_select.c
src/include/: surt.h
test/: CMakeLists.txt  test-bubble.c  test-heap.c  test-insert.c  test-merge.c  test-quick.c  test-select.c  test.h
